--- a/src/main/webapp/admin/admin.html
+++ b/src/main/webapp/admin/admin.html
@@ -89,7 +89,7 @@
 <!-- find -->
 
         <div id = "findForm" class = "form">
-            <form method="post" action = "find">
+            <form method="post" action = "finder">
                 <div class = inputBlock>
                     <label for = "ISBNF">ISBN</label><br>
                     <input type = text id = "ISBNF" name = "isbn" class = textinput>
